[tool.poetry]
name = "schedule-app"
version = "0.1.0"
description = ""
authors = ["Evgenii <jenek46@ya.ru>"]
readme = "README.md"
packages = [{include = "schedule_app"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
